1. Made it possible to COMBINE components into large logical blocks! (hotkeys F and S) 2. Removed the ability to directly connect the lever with the input (now a circle-platform with a button will be created under the lever) 3. When connecting with the mouse wheel, green LINKS are added 4. Redesign of gates + added XOR, XNOR, NOT 5. CSS: made the panel with elements wider 6. Fixed: when pressing 0, the sidebar item was not selected 7. Fixed: selectRectangle did not disappear 8. Debug: added Ctrl+Shift+dblclick (to output unformatted json)

--- a/editor.css
+++ b/editor.css
@@ -28,8 +28,9 @@ canvas{
 }
 
 #toolsContainer{
-	width: 50px;
+	width: 120px;
     text-align: center;
+    z-index: 1;
 }
 
 #toolsContainer img{
@@ -38,7 +39,7 @@ canvas{
 }
 
 #toolsContainer div{ /* note: для моих логических вентилей */
-	padding: .5em 0;
+	padding: .25em 0;
 	text-align: center;
 }
 
